--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,12 +9,15 @@ Authors@R: c(
   )
 Description: What the package does (one paragraph).
 License: Apache License 2.0
+Depends: R (>= 4.1.0)
 Imports: 
     cli,
+    dplyr,
     fs,
     glue,
     rlang,
-    rmarkdown
+    rmarkdown,
+    tidyr
 Suggests: 
     cards,
     flextable,
@@ -27,4 +30,4 @@ Encoding: UTF-8
 Language: en-US
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.2
+RoxygenNote: 7.3.3
